@@ -1,5 +1,8 @@
 --- CHANGELOG ---
 
+--- Assimulo-3.2.8 ---
+    * Sundials 5.x port
+
 --- Assimulo-3.2.7 ---
     * Resolved deprecation warnings visible when using numpy 1.20.
     * Resolved deprecation warnings visible when creating an ndarray from ragged nested sequences.
